# lib-robot

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
inc/: display.hpp  httphandler.hpp  robotmgmt.hpp
inc/http/: factory.hpp
inc/http/interfaces/: cpr.hpp  http.hpp
inc/robot/: factory.hpp  helpers.hpp  ttstexts.hpp
inc/robot/interfaces/: roarmm2.hpp  robot.hpp  robotmgmt.hpp
src/: display.cpp  helpers.cpp  httphandler.cpp  main.cpp  roarmm2.cpp  robotmgmt.cpp  ttstexts.cpp
tests/: CMakeLists.txt
